--- a/src/_scss/components/nav.scss
+++ b/src/_scss/components/nav.scss
@@ -12,7 +12,8 @@ nav {
   }
 
   ul {
-    padding: 0;
+    padding-top:    0;
+    padding-bottom: 0;
     margin-bottom: 14px;
   }
 
